tests/passing/binding_unit.tails
func tests() -> unit:
  let a = pass
  let b = a
  let c: unit = b
  let d: unit = pass

  d
