tests/failing/call_site_invalid_indirect_callee.tails
func tests() -> unit:
  let a = 123;

  a();

  pass
